Add list-restaurant view, SearchService & svg assets

--- a/client/src/app/components/layout/footer.component.html
+++ b/client/src/app/components/layout/footer.component.html
@@ -2,13 +2,13 @@
     <span class="title">JioMakan</span>
     <nav>
         <a tuiLink [routerLink]="['/about']" [style.color]="'white'">About</a>
-        <a tuiLink href="https://github.com" [style.color]="'white'">Contact Us</a>
-        <a tuiLink href="https://github.com" [style.color]="'white'">GitHub</a>
+        <a tuiLink href="https://github.com/Masqzm/NUSISS-final-project" [style.color]="'white'">Contact Us</a>
+        <a tuiLink href="https://github.com/Masqzm/NUSISS-final-project" [style.color]="'white'">GitHub</a>
     </nav>
     <div class="socials">
-        <tui-icon [icon]="facebook" [style.color]="'white'"></tui-icon>
-        <tui-icon [icon]="instagram" [style.color]="'white'"></tui-icon>
-        <tui-icon [icon]="x" [style.color]="'white'"></tui-icon>
-        <tui-icon [icon]="tiktok" [style.color]="'white'"></tui-icon>
+        <tui-icon [icon]="icons.facebook" [style.color]="'white'"></tui-icon>
+        <tui-icon [icon]="icons.instagram" [style.color]="'white'"></tui-icon>
+        <tui-icon [icon]="icons.x" [style.color]="'white'"></tui-icon>
+        <tui-icon [icon]="icons.tiktok" [style.color]="'white'"></tui-icon>
     </div>
 </footer>
