--- a/client/src/app/components/pages/home.component.html
+++ b/client/src/app/components/pages/home.component.html
@@ -2,5 +2,5 @@
     <div tuiHeader="h1" class="title">
         <tui-icon icon="@tui.soup" [style.font-size.rem]="4"/><h1 tuiTitle>JioMakan</h1>
     </div>
-    <app-search></app-search>
+    <app-search [inlineSearchBtn]="false"></app-search>
 </div>
