--- a/client/src/app/components/search.component.css
+++ b/client/src/app/components/search.component.css
@@ -1,10 +1,8 @@
-fieldset {
+.search-field {
     display: flex;
     flex-direction: column;
-}
-
-.search-input {
-    margin: 1rem;
+    justify-content: center;
+    align-items: center;
 }
 tui-textfield {
     width: 25rem;
@@ -12,5 +10,25 @@ tui-textfield {
 tui-error {
     display: block;
     text-align: center;
-    margin-top: 0.5rem;
+    margin: 10px;
+    margin-bottom: 1.2rem;
+}
+
+.inline {
+    flex-direction: row !important;
+    align-items: start;
+    gap: 20px;
+}
+
+/* animation on error */
+.shake {
+    animation: shake 0.5s ease-in-out;
+    animation-iteration-count: 1; 
+}
+@keyframes shake {
+    0% { transform: translateX(0); }
+    25% { transform: translateX(-5px); }
+    50% { transform: translateX(5px); }
+    75% { transform: translateX(-5px); }
+    100% { transform: translateX(0); }
 }
