--- a/client/src/app/components/layout/header.component.css
+++ b/client/src/app/components/layout/header.component.css
@@ -4,7 +4,7 @@ header {
     align-items: center;
     background-color: #DC3545;
     color: white;
-    padding: 10px 40px;
+    padding: 10px 90px;
 }
 
 .logo {
@@ -22,6 +22,11 @@ header {
 nav {
     display: flex;
     align-items: center;
+}
+
+.btn {
+    margin-left: 10px;
+    font-weight: 500;
 }
 
 /* nav button {
