--- a/client/src/app/components/layout/header.component.html
+++ b/client/src/app/components/layout/header.component.html
@@ -10,9 +10,9 @@
         </div>
     </a>
     <nav>
-        <button tuiButton [routerLink]="['/about']" appearance="flat" [style.color]="'white'">About</button>
-        <button tuiButton [routerLink]="['/allRsvp']" appearance="flat" [style.color]="'white'">All Jios</button>
-        <button tuiButton [routerLink]="['/login']" appearance="flat-grayscale">Login</button>
-        <button tuiButton [routerLink]="['/register']" appearance="primary-grayscale">Register</button>
+        <button class="btn" tuiButton [routerLink]="['/about']" appearance="flat" [style.color]="'white'" size="m">About</button>
+        <button class="btn" tuiButton [routerLink]="['/allRsvp']" appearance="flat" [style.color]="'white'" size="m">All Jios</button>
+        <button class="btn" id="login" tuiButton [routerLink]="['/login']" appearance="outline-grayscale" size="m" iconStart="@tui.user-round">Login</button>
+        <button class="btn" id="register" tuiButton [routerLink]="['/register']" appearance="primary-grayscale" size="m">Register</button>
     </nav>
 </header>
