--- a/client/src/app/components/pages/register.component.html
+++ b/client/src/app/components/pages/register.component.html
@@ -37,7 +37,7 @@
             <div class="border"></div>
         </footer>
         <button tuiButton class="registerG-btn" type="submit" (click)="registerGoogle()">
-            <img src="assets/google.webp" alt="Google Logo">
+            <img src="assets/icons/google.webp" alt="Google Logo">
             Continue with Google
         </button>
     </form>
