--- a/client/src/app/components/pages/login.component.html
+++ b/client/src/app/components/pages/login.component.html
@@ -35,7 +35,7 @@
             <div class="border"></div>
         </footer>
         <button tuiButton class="loginG-btn" type="submit" (click)="loginGoogle()">
-            <img src="assets/icons/google.webp" alt="Google Logo">
+            <img src="/icons/google.webp" alt="Google Logo">
             Continue with Google
         </button>
     </form>
