--- a/client/src/app/components/rsvp/rsvp-form.component.html
+++ b/client/src/app/components/rsvp/rsvp-form.component.html
@@ -1,1 +1,5 @@
-<p>rsvp-form works!</p>
+<div tuiCardLarge tuiSurface="floating" class="card">
+    <div class="card-wrapper">
+        <p>rsvp-form works!</p>
+    </div>
+</div>
