--- a/client/src/app/components/pages/restaurant.component.html
+++ b/client/src/app/components/pages/restaurant.component.html
@@ -40,7 +40,7 @@
             </section>
         </div>
 
-        <app-rsvp-form></app-rsvp-form>
+        <app-rsvp-form [restaurantId]="restaurantId"></app-rsvp-form>
     </div>
     <div class="container-btm">
 
